<resources>
    <string name="app_name">茶汇通</string>
    <string name="title_valuator_recommend">试茶师推荐</string>
    <string name="title_goods_list">商品列表</string>
    <string name="title_activity_about">关于茶汇通</string>
    <string name="title_activity_address">管理收货地址</string>
    <string name="title_activity_add_address">添加新地址</string>
    <string name="title_activity_article">茶资讯</string>
    <string name="title_activity_category">所有茶类</string>
    <string name="title_activity_cart">购物车</string>
    <string name="title_activity_bargain">限时抢购</string>
    <string name="title_activity_detail">详情</string>
    <string name="title_activity_edit_address">修改地址</string>
    <string name="title_activity_favorites">我的收藏夹</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="title_activity_flea">茶市</string>
    <string name="title_activity_flea_cate">茶市分类</string>
    <string name="title_activity_flea_my">我的茶市</string>
    <string name="title_activity_goods">商品详情</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_message">我的消息</string>
    <string name="title_activity_modify_pwd">修改密码</string>
    <string name="title_activity_order">确认订单</string>
    <string name="title_activity_order_detail">订单详情</string>
    <string name="title_activity_pay_result">支付详情</string>
    <string name="title_activity_pay_order">订单支付</string>
    <string name="title_activity_personal">个人中心</string>
    <string name="title_activity_profile">修改资料</string>
    <string name="title_activity_province">选择省份</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_reset_password">重置密码</string>
    <string name="title_activity_sample">本期免费茶样</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_trace_add">发表动态</string>
    <string name="title_activity_trace_commend">精选动态</string>
    <string name="title_activity_voucher">我的优惠券</string>
    <string name="title_my_order">我的订单</string>
    <string name="title_discover">发现</string>
    <string name="title_trace_detail">动态详情</string>
    <string name="title_publish">发布</string>
    <string name="subhead_home_recommend">试茶师推荐 </string>
    <string name="subhead_home_guess">猜你喜欢 </string>
    <string name="subhead_search_history">历史搜索</string>
    <string name="subhead_search_hot">热门搜索</string>
    <string name="btn_add_address">添加地址</string>
    <string name="btn_add_cart">加入购物车</string>
    <string name="btn_add_follow">+关注</string>
    <string name="btn_address">收货地址</string>
    <string name="btn_address_set_default">设为默认</string>
    <string name="btn_all_order">查看全部订单</string>
    <string name="btn_apply">申&#160;&#160;领</string>
    <string name="btn_back_home">返回首页</string>
    <string name="btn_balance">结算</string>
    <string name="btn_born">出生年月</string>
    <string name="btn_buy">立即购买</string>
    <string name="btn_buy_add_address">请填写收货信息</string>
    <string name="btn_cancel">取&#160;消</string>
    <string name="btn_cart">购物车</string>
    <string name="btn_check_all">全选</string>
    <string name="btn_consult">留言</string>
    <string name="btn_delete">删除</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_favorites">收藏</string>
    <string name="btn_followed">已关注</string>
    <string name="btn_forgot_password">忘记密码</string>
    <string name="btn_gender">性别</string>
    <string name="btn_go_cart">去购物车</string>
    <string name="btn_go_pay">去支付</string>
    <string name="btn_go_shopping">去逛逛</string>
    <string name="btn_has_favorite">已收藏</string>
    <string name="btn_home_apply">点击领取</string>
    <string name="btn_home_buy">点击抢购</string>
    <string name="btn_login_feedback">意见反馈</string>
    <string name="btn_login_or_register">点击登录/注册</string>
    <string name="btn_login_qq">腾讯QQ</string>
    <string name="btn_login_register">注册帐号</string>
    <string name="btn_login_weibo">新浪微博</string>
    <string name="btn_login_wechat">微信</string>
    <string name="btn_logout">退出登录</string>
    <string name="btn_message">咨询</string>
    <string name="btn_message_at">\@我</string>
    <string name="btn_message_comment">评论和赞</string>
    <string name="btn_message_fans">新的粉丝</string>
    <string name="btn_message_system">系统通知</string>
    <string name="btn_minus">-</string>
    <string name="btn_modify_password">修改密码</string>
    <string name="btn_move_favorites">移入收藏夹</string>
    <string name="btn_no_price">不供价</string>
    <string name="btn_ok">确&#160;定</string>
    <string name="btn_order_sure">确认订单</string>
    <string name="btn_order_cancel">取消订单</string>
    <string name="btn_order_delivery">查看物流</string>
    <string name="btn_order_comment">去评价</string>
    <string name="btn_order_delete">删除订单</string>
    <string name="btn_paid">待发货</string>
    <string name="btn_pay">付款</string>
    <string name="btn_phone">电话</string>
    <string name="btn_plus">+</string>
    <string name="btn_publish">发&#160;&#160;布</string>
    <string name="btn_read_comment">看评价</string>
    <string name="btn_receive">待收货</string>
    <string name="btn_register">注&#160;册</string>
    <string name="btn_relation_friend">互相关注</string>
    <string name="btn_repay">重新付款</string>
    <string name="btn_save">保存</string>
    <string name="btn_save_address">保存地址</string>
    <string name="btn_send_code">获取验证码</string>
    <string name="btn_service">客服</string>
    <string name="btn_setting_about_us">关于茶汇通</string>
    <string name="btn_setting_clean_cache">清除缓存</string>
    <string name="btn_setting_check_update">检查更新</string>
    <string name="btn_setting_profile">个人资料</string>
    <string name="btn_share">分享</string>
    <string name="btn_stay_shopping">再逛逛</string>
    <string name="btn_submit">提&#160;交</string>
    <string name="btn_to_buy">去购买</string>
    <string name="btn_trace_comment">评价%s</string>
    <string name="btn_trace_like">赞%s</string>
    <string name="btn_unpaid">待付款</string>
    <string name="btn_uncomment">待评价</string>
    <string name="btn_view_all_class">查看所有品类</string>
    <string name="btn_view_more">查看更多</string>
    <string name="btn_view_order">查看订单</string>
    <string name="btn_view_trace_commend">查看全部精选动态</string>
    <string name="btn_voucher_order">选择优惠券</string>
    <string name="text_copyright">©茶信科技</string>
    <string name="text_about_chahuitong">茶汇通APP是茶产业垂直生态平台，整合茶域庞大的生态圈，融合线上线下，提供专家咨询、精华资讯、
        即时交流、茶圈互动、活动发起、精品购茶等一系列多样化服务。在茶汇通，茶友圈的信息是即时的、直接的、精华的、权威的；茶产品是安全、高质
        、正品、专享的；茶友圈的社交是个性的、全分享的。</string>
    <string name="text_hotline_counseling">客服/热线咨询：</string>
    <string name="text_phone_number">05925990900</string>
    <string name="text_rmb">￥%s</string>
    <string name="text_freight">运费</string>
    <string name="text_carriage_free">免运费</string>
    <string name="text_sample_notice">申领资格：茶汇通注册会员\r\n申领限额：每月一次\r\n申领流程</string>
    <string name="text_cart_empty">暂无商品</string>
    <string name="text_empty">这里空空如也，快去逛逛吧~~</string>
    <string name="text_empty_comment">还没有任何评论，快来抢沙发吧~~</string>
    <string name="text_empty_trace">还未发表过任何动态</string>
    <string name="text_goods_quality">正品保证</string>
    <string name="text_goods_delivery_today">12小时发货</string>
    <string name="text_goods_spot">实地认证</string>
    <string name="text_go_login">去登录</string>
    <string name="text_bargain_timer">距离结束还剩</string>
    <string name="text_day">天</string>
    <string name="text_hour">时</string>
    <string name="text_minute">分</string>
    <string name="text_second">秒</string>
    <string name="text_favorites_empty">您还未收藏任何商品哦~</string>
    <string name="text_order_empty">您还没有相关订单，快去看看有什么想买的~</string>
    <string name="text_valuer_empty">不好意思我们不卖这种茶~</string>
    <string name="text_pay_prepare">正在支付中&#8230;</string>
    <string name="text_pay_success">嗨，你支付成功了！</string>
    <string name="text_pay_fail">哦额，您的订单支付失败了！</string>
    <string name="text_pay_title_prefix">茶汇通-订单编号</string>
    <string name="text_publish_time">发布于%s</string>
    <string name="text_alipay">支付宝</string>
    <string name="text_alipay_body">支付宝用户使用</string>
    <string name="text_wxpay">微信支付</string>
    <string name="text_wxpay_body">微信支付用户使用</string>
    <string name="text_upload_avatar">上传头像</string>
    <string name="text_upmp">银行卡支付</string>
    <string name="text_upmp_body">支持所有银联储蓄卡和信用卡支付</string>
    <string name="text_voucher_none">没有可用的优惠券</string>
    <string name="text_recommend_score">综合评价%s分</string>
    <string name="text_to">%1$s&#160;~&#160;%2$s</string>
    <string name="text_trace_need_login">登录后查看好友动态</string>
    <string name="text_man">【满%s】</string>
    <string name="text_xianshi_storage">已抢购%1$s份/共%2$s份</string>
    <string name="text_image_indicator">%1$s/%2$s</string>
    <string name="text_order_count">共%s件商品</string>
    <string name="text_order_goods_count">x%s</string>
    <string name="text_original_comment">%1$s:&#160;%2$s</string>
    <string name="text_consignee">收件人：%1$s&#160;&#160;%2$s</string>
    <string name="text_address">收货地址：%1$s&#160;%2$s</string>
    <string name="text_news">茶资讯</string>
    <string name="text_news_caption">每日新鲜茶资讯</string>
    <string name="text_hill">山头</string>
    <string name="text_hill_caption">名山出名茶</string>
    <string name="text_trace_commend">精选动态</string>
    <string name="text_flea_commend">茶市精选</string>
    <string name="text_staple_class">热门茶类</string>
    <string name="text_user_commend">推荐用户</string>
    <string name="text_article_heat">%1$s阅读 · %2$s评论</string>
    <string name="text_flea_heat">%1$s浏览&#160;&#160;%2$s留言&#160;&#160;%3$s收藏</string>
    <string name="text_feedback_wb">微博@茶汇通APP</string>
    <string name="text_feedback_qq">客服QQ 3319703576</string>
    <string name="text_edit">编辑</string>
    <string name="text_flea_click">%s次浏览</string>
    <string name="text_flea_unit">元/斤</string>
    <string name="label_account">帐号：</string>
    <string name="label_alipay_desc">支付宝用户使用</string>
    <string name="label_area">省市区</string>
    <string name="label_bargain_buy">马上抢</string>
    <string name="label_buy_limit">每人限领<b>1</b>份</string>
    <string name="label_code">验证码</string>
    <string name="label_comment">评论</string>
    <string name="label_consignee_name">收件人</string>
    <string name="label_detail_address">详细地址</string>
    <string name="label_flea_cate">所属分类</string>
    <string name="label_flea_consult">留言</string>
    <string name="label_flea_contacts">联&#160;&#160;系&#160;&#160;人</string>
    <string name="label_flea_detail">详细描述</string>
    <string name="label_flea_price">单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;价</string>
    <string name="label_flea_notice">购买前请充分和卖家沟通，避免交易中产生纠纷。</string>
    <string name="label_flea_phone">联系电话</string>
    <string name="label_following">关注</string>
    <string name="label_followers">粉丝</string>
    <string name="label_freight">运&#160;&#160;&#160;&#160;费：</string>
    <string name="label_goods_attrs">产品参数：</string>
    <string name="label_goods_freight">运费：%s</string>
    <string name="label_goods_origin"><b>产地：</b></string>
    <string name="label_goods_sales">月销量：</string>
    <string name="label_goods_style">购买选择：</string>
    <string name="label_goods_storage"><b>库存：</b></string>
    <string name="label_goods_total">商品总额：</string>
    <string name="label_mobile_number">手机号 </string>
    <string name="label_password">密&#160;&#160;&#160;&#160;码</string>
    <string name="label_pwd_confirm">重复输入</string>
    <string name="label_pwd_new">新密码</string>
    <string name="hint_login_username">请您输入手机号/用户名</string>
    <string name="hint_mobile_number">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_confirm_password">请确认新的密码</string>
    <string name="hint_captcha">6位验证码</string>
    <string name="hint_limit_name">最少2个字</string>
    <string name="hint_limit_mobile">11位手机号</string>
    <string name="hint_please_choose">请选择</string>
    <string name="hint_detail_address">请输入详细地址(支持中英文、空格、下划线)</string>
</resources>