<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.damenghai.chahuitong.module.user.ForgotActivity">

    <include layout="@layout/include_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/tv_reset_pwd_mobile"
            style="@style/LabelSecondaryMedium"
            android:text="@string/label_mobile_number"
            />

        <EditText
            android:id="@+id/et_reset_pwd_mobile"
            style="@style/TextBody"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_medium_height"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/tv_reset_pwd_mobile"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/hint_mobile_number"
            android:inputType="phone"
            android:maxLength="11"
            android:textColorHint="@color/text_hint"
            />

        <TextView
            android:id="@+id/tv_reset_pwd_code"
            style="@style/LabelSecondaryMedium"
            android:layout_below="@id/tv_reset_pwd_mobile"
            android:text="@string/label_code"
            />

        <EditText
            android:id="@+id/et_reset_pwd_code"
            style="@style/TextBody"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/widget_medium_height"
            android:layout_below="@id/et_reset_pwd_mobile"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/tv_reset_pwd_code"
            android:background="@color/white"
            android:ems="6"
            android:hint="@string/hint_captcha"
            android:inputType="number"
            android:maxLength="6"
            android:textColorHint="@color/text_hint"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_reset_pwd_mobile"
            android:background="@color/div_gray"
            />

        <Button
            android:id="@+id/btn_reset_pwd_code"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_reset_pwd_mobile"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_radius_primary2dark_selector"
            android:text="@string/btn_send_code"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_caption_material"
            />

        <TextView
            android:id="@+id/tv_reset_pwd_new"
            style="@style/LabelSecondaryMedium"
            android:layout_below="@id/et_reset_pwd_code"
            android:text="@string/label_pwd_new"
            />

        <EditText
            android:id="@+id/et_reset_pwd_new"
            style="@style/TextBody"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_medium_height"
            android:layout_below="@id/et_reset_pwd_code"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/tv_reset_pwd_new"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_reset_pwd_code"
            android:background="@color/div_gray"
            />

        <TextView
            android:id="@+id/tv_reset_pwd_confirm"
            style="@style/LabelSecondaryMedium"
            android:layout_below="@id/tv_reset_pwd_new"
            android:text="@string/label_pwd_confirm"
            />

        <EditText
            android:id="@+id/et_reset_pwd_confirm"
            style="@style/TextBody"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_medium_height"
            android:layout_below="@id/et_reset_pwd_new"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/tv_reset_pwd_confirm"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_reset_pwd_new"
            android:background="@color/div_gray"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_reset_pwd_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_radius_primary2dark_selector"
        android:text="@string/btn_ok"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_subhead_material"/>

</LinearLayout>
