<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.settings.SettingsActivity">

    <include layout="@layout/include_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        >


        <Button
            android:id="@+id/btn_setting_profile"
            style="@style/ListItemDetailButton"
            android:onClick="toProfile"
            android:text="@string/btn_setting_profile"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/div_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                style="@style/ListItemDetailButton"
                android:onClick="toCleanCache"
                android:text="@string/btn_setting_clean_cache"
                />

            <TextView
                android:id="@+id/tv_setting_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="32dp"
                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/div_gray"/>

        <Button
            style="@style/ListItemDetailButton"
            android:onClick="toCheckUpdate"
            android:text="@string/btn_setting_check_update"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/div_gray"/>

        <Button
            style="@style/ListItemDetailButton"
            android:onClick="toAboutUs"
            android:text="@string/btn_setting_about_us"
            />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/btn_radius_primary2dark_selector"
        android:onClick="toLogout"
        android:text="@string/btn_logout"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_subhead_material"
        />

</LinearLayout>
